# Amplitude

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  amplitude.x  build.sh  cmake_install.cmake
include/: .shader.h.swp
include/glad/: glad.h
src/: .main.cpp.swo  .main.cpp.swp  glad.c  main.cpp  shader.h
src/shaders/: .field.fs.swp  .field.vs.swo  .field.vs.swp  .field2.vs.swp  field.fs  field.vs  field1.fs  field1.vs  field2.fs  field2.vs
